[package]
name = "qua_format"
version = "0.1.0"
edition = "2021"
description = "A Rust library to parse .qua files"
authors = ["IceDynamix"]
repository = "https://github.com/IceDynamix/rust-qua-format"
license = "MIT"
keywords = ["quaver", "vsrg", "map"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
