[package]
name = "qua_format"
version = "0.1.5"
edition = "2021"
description = "A Rust library to parse .qua files"
authors = ["IceDynamix"]
repository = "https://github.com/IceDynamix/rust-qua-format"
license = "MIT"
keywords = ["quaver", "vsrg", "map"]
documentation = "https://docs.rs/qua_format/0.1.0/qua_format/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_repr = "0.1"
